--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^8.2.9",
+    "imagekitio-vue": "^1.0.9",
+    "purecss": "^2.0.5",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
